# vivijure

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  deploy.env.example  deploy.sh  node_modules  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.demo.toml.example  wrangler.example.toml  wrangler.mcp.toml.example  wrangler.toml  wrangler.toml.example
.dev-modbound/: dev-modbound.sh
.playwright-mcp/: page-2026-07-02T01-30-15-815Z.yml  page-2026-07-02T01-30-45-647Z.yml  page-2026-07-02T01-30-57-183Z.yml  page-2026-07-02T01-31-17-053Z.yml  page-2026-07-02T08-48-49-369Z.yml  page-2026-07-02T09-18-28-727Z.yml
containers/: compose.yaml
deploy/: README.md  constellation.sh  push-secrets.sh  test_adopt_provenance.py  test_isolation.py  test_secret_map.py  vivijure_deploy.py
docs/: 309-r2-orphan-gc-owners.json  309-r2-orphan-gc.md  CONTRACT.md  DEPLOYMENT.md  RELEASE-TAGS.md  SECURITY.md  demo-studio.md  deploy-config-injection.md  deploy-runbook.md  mcp.md  module-api.md  module-authoring.md  module-dispatch.md  observability-vivijure-tail.md  observability.md  opt-in-tiers.md  quickstart.md  security-false-positives.md
migrations/: 0001_init.sql  0002_user_prefs.sql  0004_drop_user_email.sql
modules/plan-enhance-py/: .gitignore  README.md  pyproject.toml  wrangler.toml
modules/plan-enhance-py/src/: enhance.py  entry.py
public/: app.js  auth-token.js  cast-select.d.ts  cast.html  cast.js  demo-steer.js  index.html  lora-preflight.d.ts  lora-preflight.js  modules.html  planner-bundle.js  planner-cast.js  planner-fieldhelp.js  (+19 more)
(+328 files in other folders)
